# elastodynamics_friction_squeaking

./: CMakeLists.txt  README.md
bimat_friction/: CMakeLists.txt  analytic_static_solution.cc  full_mpi_static_solution.cc  generate_2d_dynamic.py  generate_2d_static.py  mixed_mode_fracture.cc
bimat_friction/meshes/: block_2d_L0.04_Ht0.02_msh100_quad4.geo  block_2d_L0.04_Ht0.02_msh200_quad4.geo  block_2d_L0.04_Ht0.02_msh400_quad4.geo  block_2d_L0.04_Ht0.02_msh800_quad4.geo  block_2d_L0.2_Ht0.1_msh1000_quad4.geo  block_2d_L0.2_Ht0.1_msh200_quad4.geo  generate_2x2_blocks2d.py  how_to_generate.txt
eigenfrequency_analysis/: Model_detachable_2D_py.py
